ITOPS-1715 ConfluenceServer stacks need IAM permissions to use KMS keys

--- a/templates/ConfluenceServer.template.yaml
+++ b/templates/ConfluenceServer.template.yaml
@@ -996,6 +996,20 @@ Resources:
                     - !Sub '${AWS::StackName} sg'
                 Effect: Allow
                 Resource: ['*']
+              - !If
+                - UseEncryption
+                - Action:
+                  - 'kms:CreateGrant'
+                  - 'kms:Decrypt'
+                  - 'kms:DescribeKey'
+                  - 'kms:Encrypt'
+                  - 'kms:GenerateDataKey*'
+                  - 'kms:ListGrants'
+                  - 'kms:ReEncrypt*'
+                  - 'kms:RevokeGrant'
+                  Effect: Allow
+                  Resource: !Ref KmsKeyArn
+                - !Ref AWS::NoValue
         - PolicyName: !Sub '${AWS::StackName}-ansible-custom-policy'
           PolicyDocument:
             Version: 2012-10-17
