Sets hosted zone in makefile, add documentation on hosted zone, set a gitignore to make dev easier

--- a/quickstarts/ci/lambdas/Makefile
+++ b/quickstarts/ci/lambdas/Makefile
@@ -2,7 +2,9 @@
 
 default: clean
 
-aws-region ?= us-east-2
+aws-region ?= us-east-1
+
+hosted-zone ?= Z2R1NCP8IR4TFQ
 
 clean:
 	@echo "Cleaning vendor and artifacts"
@@ -18,7 +20,7 @@ package: zip-deps
 	zip -g cleanup.zip cleanup.py
 
 create-lambda: package
-		aws lambda create-function  --function-name cleaner-lambda --zip-file fileb://cleanup.zip --runtime  python3.6 --handler cleanup.handler --role "arn:aws:iam::$(aws-account):role/$(aws-role)" --environment Variables="{CLEANUP_AWS_ACCOUNT=$(aws-account),CLEANUP_AWS_REGION=$(aws-region),CLEANUP_TASKCAT_ONLY=True}" --timeout 30
+		aws lambda create-function  --function-name cleaner-lambda --zip-file fileb://cleanup.zip --runtime  python3.6 --handler cleanup.handler --role "arn:aws:iam::$(aws-account):role/$(aws-role)" --environment Variables="{CLEANUP_AWS_ACCOUNT=$(aws-account),CLEANUP_AWS_REGION=$(aws-region),CLEANUP_TASKCAT_ONLY=True,HOSTED_ZONE_ID=$(hosted-zone)}" --timeout 30
 
 update-lambda: package
 		aws lambda update-function-code  --function-name cleaner-lambda --zip-file fileb://cleanup.zip
