ITOPSENG-256 Set default ALB session stickiness to 5 hours. This is Jira's auth session default and is a sensible default for all products. Without this, the backend session stickiness defaults to 1 day, which can result in load not rebalancing for days after nodes restart.

--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -1877,6 +1877,8 @@ Resources:
           Value: 'true'
         - Key: stickiness.type
           Value: lb_cookie
+        - Key: stickiness.lb_cookie.duration_seconds
+          Value: '18000'
       Tags:
         - Key: Name
           Value: MainTargetGroup
@@ -1904,6 +1906,8 @@ Resources:
           Value: 'true'
         - Key: stickiness.type
           Value: lb_cookie
+        - Key: stickiness.lb_cookie.duration_seconds
+          Value: '18000'
       Tags:
         - Key: Name
           Value: SynchronyTargetGroup
