--- a/templates/ConfluenceDataCenterClone.template.yaml
+++ b/templates/ConfluenceDataCenterClone.template.yaml
@@ -1940,6 +1940,8 @@ Resources:
           Value: 'true'
         - Key: stickiness.type
           Value: lb_cookie
+        - Key: stickiness.lb_cookie.duration_seconds
+          Value: '18000'
       Tags:
         - Key: Name
           Value: MainTargetGroup
@@ -1967,6 +1969,8 @@ Resources:
           Value: 'true'
         - Key: stickiness.type
           Value: lb_cookie
+        - Key: stickiness.lb_cookie.duration_seconds
+          Value: '18000'
       Tags:
         - Key: Name
           Value: SynchronyTargetGroup
