--- a/templates/ConfluenceServer.template.yaml
+++ b/templates/ConfluenceServer.template.yaml
@@ -1413,6 +1413,8 @@ Resources:
           Value: 'true'
         - Key: stickiness.type
           Value: lb_cookie
+        - Key: stickiness.lb_cookie.duration_seconds
+          Value: '18000'
       Tags:
         - Key: Name
           Value: ConfluenceServerTargetGroup
