--- a/templates/ConfluenceServerClone.template.yaml
+++ b/templates/ConfluenceServerClone.template.yaml
@@ -1356,6 +1356,8 @@ Resources:
           Value: 'true'
         - Key: stickiness.type
           Value: lb_cookie
+        - Key: stickiness.lb_cookie.duration_seconds
+          Value: '18000'
       Tags:
         - Key: Name
           Value: ConfluenceServerTargetGroup
