Add branch to services submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,4 @@
 [submodule "quickstarts/quickstart-atlassian-services"]
 	path = quickstarts/quickstart-atlassian-services
 	url = git://github.com/atlassian/quickstart-atlassian-services.git
+	branch = develop
