ITOPSENG-262 enable pipelines builds for ITOPSENG branches as well

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,7 +15,7 @@ pipelines:
         script:
             - echo 'only running CI on ITOPS branches for now'
   branches:
-    'ITOPS-*':
+    'ITOPS*':
         - step:
             name: Build Atlassian Services AWS Environment (VPC + tooling) from quickstart (if doesnt exist)
             script:
