--- a/templates/JiraDataCenter.template.yaml
+++ b/templates/JiraDataCenter.template.yaml
@@ -1371,21 +1371,37 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: service_name
           Value: !Ref AWS::StackName
-  LoadBalancerV2Listener:
+  LoadBalancerHTTPListener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties:
+      DefaultActions:
+        - !If
+          - DoSSL
+          - Type: redirect
+            RedirectConfig:
+              Protocol: HTTPS
+              Port: '443'
+              Host: '#{host}'
+              Path: '/#{path}'
+              Query: '#{query}'
+              StatusCode: HTTP_301
+          - Type: forward
+            TargetGroupArn: !Ref MainTargetGroup
+      LoadBalancerArn: !Ref LoadBalancer
+      Port: 80
+      Protocol: HTTP
+  LoadBalancerHTTPSListener:
+    Condition: DoSSL
     Type: AWS::ElasticLoadBalancingV2::Listener
     Properties:
       Certificates:
-        - CertificateArn:
-            !If
-              - DoSSL
-              - !Ref SSLCertificateARN
-              - !Ref AWS::NoValue
+        - CertificateArn: !Ref SSLCertificateARN
       DefaultActions:
         - Type: forward
           TargetGroupArn: !Ref MainTargetGroup
-      LoadBalancerArn: !Ref LoadBalancerV2
-      Port: !If [DoSSL, 443, 80]
-      Protocol: !If [DoSSL, HTTPS, HTTP]
+      LoadBalancerArn: !Ref LoadBalancer
+      Port: 443
+      Protocol: HTTPS
   LoadBalancerCname:
     Condition: UseHostedZone
     Type: AWS::Route53::RecordSet
@@ -1443,6 +1459,10 @@ Resources:
         - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
+          CidrIp: !Ref CidrBlock
+        - IpProtocol: tcp
+          FromPort: 8080
+          ToPort: 8080
           CidrIp: !Ref CidrBlock
         - IpProtocol: tcp
           FromPort: 443
