--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -227,6 +227,12 @@ Parameters:
       - c5.4xlarge
       - c5.9xlarge
       - c5.18xlarge
+      - c5n.large
+      - c5n.xlarge
+      - c5n.2xlarge
+      - c5n.4xlarge
+      - c5n.9xlarge
+      - c5n.18xlarge
       - c5d.large
       - c5d.xlarge
       - c5d.2xlarge
@@ -584,6 +590,12 @@ Parameters:
       - c5.4xlarge
       - c5.9xlarge
       - c5.18xlarge
+      - c5n.large
+      - c5n.xlarge
+      - c5n.2xlarge
+      - c5n.4xlarge
+      - c5n.9xlarge
+      - c5n.18xlarge
       - c5d.large
       - c5d.xlarge
       - c5d.2xlarge
@@ -786,6 +798,24 @@ Mappings:
       Arch: HVM64
       Jvmheap: 12288m
     c5.18xlarge:
+      Arch: HVM64
+      Jvmheap: 12288m
+    c5n.large:
+      Arch: HVM64
+      Jvmheap: 2048m
+    c5n.xlarge:
+      Arch: HVM64
+      Jvmheap: 5120m
+    c5n.2xlarge:
+      Arch: HVM64
+      Jvmheap: 12288m
+    c5n.4xlarge:
+      Arch: HVM64
+      Jvmheap: 12288m
+    c5n.9xlarge:
+      Arch: HVM64
+      Jvmheap: 12288m
+    c5n.18xlarge:
       Arch: HVM64
       Jvmheap: 12288m
     c5d.large:
