--- a/templates/JiraDataCenterClone.template.yaml
+++ b/templates/JiraDataCenterClone.template.yaml
@@ -830,41 +830,37 @@ Mappings:
       Jvmheap: 12288m
   AWSRegion2AMI:
     ap-northeast-1:
-      HVM64: ami-00d101850e971728d
+      AMI: ami-0af1df87db7b650f4
     ap-northeast-2:
-      HVM64: ami-08ab3f7e72215fe91
+      AMI:  ami-0a93a08544874b3b7
     ap-south-1:
-      HVM64: ami-00e782930f1c3dbc7
+      AMI:  ami-0d9462a653c34dab7
     ap-southeast-1:
-      HVM64: ami-0b5a47f8865280111
+      AMI:  ami-0f02b24005e4aec36
     ap-southeast-2:
-      HVM64: ami-0fb7513bcdc525c3b
+      AMI:  ami-0f767afb799f45102
     ca-central-1:
-      HVM64: ami-08a9b721ecc5b0a53
+      AMI:  ami-00db12b46ef5ebc36
     eu-central-1:
-      HVM64: ami-0ebe657bc328d4e82
+      AMI:  ami-0df0e7600ad0913a9
     eu-north-1:
-      HVM64: ami-1fb13961
+      AMI:  ami-074a0e4318181e9d9
     eu-west-1:
-      HVM64: ami-030dbca661d402413
+      AMI:  ami-099a8245f5daa82bf
     eu-west-2:
-      HVM64: ami-0009a33f033d8b7b6
+      AMI:  ami-0389b2a3c4948b1a0
     eu-west-3:
-      HVM64: ami-0ebb3a801d5fb8b9b
+      AMI:  ami-0fd9bce3a3384b635
     sa-east-1:
-      HVM64: ami-058141e091292ecf0
+      AMI:  ami-080a223be3de0c3b8
     us-east-1:
-      HVM64: ami-0c6b1d09930fac512
+      AMI:  ami-0a887e401f7654935
     us-east-2:
-      HVM64: ami-0ebbf2179e615c338
+      AMI:  ami-0e38b48473ea57778
     us-west-1:
-      HVM64: ami-015954d5e5548d13b
+      AMI:  ami-01c94064639c71719
     us-west-2:
-      HVM64: ami-0cb72367e98845d43
-    us-gov-west-1:
-      HVM64: ami-e9a9d388
-    us-gov-east-1:
-      HVM64: ami-a2d938d3
+      AMI:  ami-0e8c04af2729ff1bb
 Resources:
   ClusterNodeRole:
     Type: AWS::IAM::Role
