--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -1078,7 +1078,8 @@ Mappings:
       HVM64: ami-00fa475433251c41d
       HVMG2: NOT_SUPPORTED
     eu-central-1:
-      HVM64: ami-0d7ffddee8c7f2097
+#     Created custom AMI
+      HVM64: ami-08de115016398526e
       HVMG2: NOT_SUPPORTED
     eu-north-1:
       HVM64: ami-0f43b683e6bb6b358
